--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,17 @@ h5,
 h6 {
   font-family: "Raleway", sans-serif;
 }
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin: 2%;
+  padding: 5px;
+  width: 40%;
+}
+
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
 
 /*--------------------------------------------------------------
 # Back to top button
