--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ h5,
 h6 {
   font-family: "Raleway", sans-serif;
 }
-img {
+.portfoliopic{
   border: 1px solid #ddd;
   border-radius: 4px;
   margin: 2%;
@@ -39,7 +39,7 @@ img {
   width: 40%;
 }
 
-img:hover {
+.portfoliopic:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
